tests/negative/neg_rule4_uninitialized.safe
-- Test: neg_rule4_uninitialized
-- Description: Dereference of an access variable that has no initial value.
--   The access variable's default value is null, and it is dereferenced
--   without being assigned a non-null value.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Expected: REJECT null_dereference

package uninitialized_test

   type rec is record
      x : integer;

   type rec_ptr is access rec;

   --  Read_Uninitialized: declares P (default null), then dereferences.
   function read_uninitialized returns integer
      p : rec_ptr;

      --  P is null (default for access types).
      return p.all.x;  -- ERROR: P is null (uninitialized = null)

